--- a/src/App.less
+++ b/src/App.less
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+header {
+  background: #F1C300;;
+  font-size: 18px;
+  font-weight: bold;
+  height: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+.content-beer {
+  height: calc(100vh - 100px - 43px);
+}
