--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,6 @@
+@import "~antd-mobile/dist/antd-mobile.less";   // Introduce the official less style entry file
+@import "./theme.less";   // Used to override the variables defined above
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
